# yotta.vegas

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  fabfile.py  gunicorn-conf.py  heroku.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  webpack.config.js
.github/workflows/: docker-publish.yml
public/: robots.txt
scripts/: bash.sh
yotta/: urls.py  wsgi.py
yotta/home/: models.py
yotta/home/migrations/: 0003_homepage_listing_image_homepage_listing_summary_and_more.py  0004_homepage_body_homepage_introduction_and_more.py  0005_remove_homepage_introduction_and_more.py
yotta/images/: models.py
yotta/images/migrations/: 0001_initial.py  0002_alter_customimage_file_alter_customrendition_file.py
yotta/navigation/: blocks.py  models.py
yotta/navigation/migrations/: 0001_initial.py  0002_alter_navigationsettings_primary_navigation.py  0003_alter_navigationsettings_primary_navigation.py
yotta/navigation/templatetags/: navigation_tags.py
yotta/settings/: base.py  dev.py  production.py
yotta/static_compiled/: main.117cad8234b629080fbe.hot-update.js  main.223a0477c5bd6a6252a5.hot-update.js  main.c74999fba1bb506eb5a8.hot-update.js  main.css  main.js
yotta/static_src/css/: main.css
yotta/static_src/js/: main.js
yotta/templates/: 404.html
yotta/templates/atoms/: down-chevron.html
yotta/templates/components/: cookie-policy.html  footer.html  navbar.html  skiplink.html
yotta/templates/pages/: base.html  base_page.html  blog_index_page.html  (+2 more)
yotta/utils/: blocks.py  constants.py  models.py  views.py
(+14 files in other folders)
