[tool.poetry]
name = "yotta"
version = "0.1.0"
description = "Yotta POC"
authors = ["William Blackie <will@developerfy.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = "^6.0.2"
Django = "^5.0.4"
dj-database-url = "^2.1.0"
sentry-sdk = "^2.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
django-storages = "^1.14.2"
boto3 = "^1.34.94"
psycopg2-binary = "^2.9.9"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
djhtml = "^3.0.6"
djlint = "^1.34.1"
black = "^24.4.2"
fabric = "^3.2.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
